# tzibal-ulew

./: .gitignore  Makefile  PLAN.md  alembic.ini  config.py  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 5cdf96b6cc4c_create_trips_species_records_tables.py
api/: database.py  dependencies.py  main.py
api/models/: __init__.py  record.py  species.py  trip.py
api/routers/: map.py  records.py  species.py  stats.py  system.py  trips.py
api/schemas/: __init__.py  map.py  record.py  species.py  stats.py  trip.py
assets/: styles.qss
core/: logging_config.py
tests/: conftest.py
tests/api/: test_map.py  test_records.py  test_species.py  test_stats.py  test_trips.py
tests/ui/: test_dashboard_view.py  test_main_window.py  test_species_view.py  test_trip_form.py  test_trips_view.py
ui/: api_client.py  app.py  exceptions.py
ui/views/: dashboard_view.py  map_view.py  species_view.py  stats_view.py  trip_form.py  trips_view.py
ui/widgets/: map_widget.py
